Fix leak of HID transfers and handles on Windows.

This patch reworks the management of PendingHidTransfer objects in the
Windows HID backend so that they are no longer reference counted. It
then adds logic to free all transfers when the device handle is closed
in order to break the circular reference between transfers and the
connection object.

BUG=618213

Review-Url: https://codereview.chromium.org/2573683002
Cr-Commit-Position: refs/heads/master@{#438374}

Former-commit-id: e62aec48485940cb4e214dd8f6845ebc89f20dee